maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:2: error: Missing closing brace `}' assumed here
def ecritPos(x:Int,y:Int,a:Int,est:Boolean,sud:Boolean):Boolean={
^ShortestPathMaze:2: error: expected class or object definition
def ecritPos(x:Int,y:Int,a:Int,est:Boolean,sud:Boolean):Boolean={
^